Test Sandbox Project/src/objects/Agent_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Badge__c</fullName>
        <formula>IF (Attendance_Score__c &gt;= Value($Label.BS_Att_1_Dewa), &quot;Dewa&quot;,
IF (Attendance_Score__c &gt;= Value($Label.BS_Att_2_Keren), &quot;Keren Abiz&quot;,
IF (Attendance_Score__c &gt;= Value($Label.BS_Att_3_Oleh), &quot;Oleh Uga&quot;,
IF (Attendance_Score__c &gt;= Value($Label.BS_Att_4_Mayan), &quot;Mayanlah&quot;,
IF (Attendance_Score__c &gt;= Value($Label.BS_Att_5_Cupu), &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Late__c</fullName>
        <label>Attendance Late</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>untuk hitung ulang</description>
        <label>Attendance Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Score__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_UL__c</fullName>
        <label>Attendance UL</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Activity_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Activity_1_Dewa)</defaultValue>
        <label>BS_Activity_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Activity_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_Activity_2_Keren)</defaultValue>
        <label>BS_Activity_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Activity_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_Activity_3_Oleh)</defaultValue>
        <label>BS_Activity_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Activity_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_Activity_4_Mayan)</defaultValue>
        <label>BS_Activity_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Activity_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Activity_5_Cupu)</defaultValue>
        <label>BS_Activity_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_1_Dewa)</defaultValue>
        <label>BS_Att_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_2_Keren)</defaultValue>
        <label>BS_Att_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_3_Oleh)</defaultValue>
        <label>BS_Att_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_4_Mayan)</defaultValue>
        <label>BS_Att_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_5_Cupu)</defaultValue>
        <label>BS_Att_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_UL_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_UL_Cupu)</defaultValue>
        <label>BS_Att_UL_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Att_UL_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Att_UL_Dewa)</defaultValue>
        <label>BS_Att_UL_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_CSAT_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_CSAT_1_Dewa)</defaultValue>
        <label>BS_CSAT_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_CSAT_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_CSAT_2_Keren)</defaultValue>
        <label>BS_CSAT_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_CSAT_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_CSAT_3_Oleh)</defaultValue>
        <label>BS_CSAT_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_CSAT_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_CSAT_4_Mayan)</defaultValue>
        <label>BS_CSAT_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_CSAT_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_CSAT_5_Cupu)</defaultValue>
        <label>BS_CSAT_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_HoldTime_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_HoldTime_1_Dewa)</defaultValue>
        <label>BS_HoldTime_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_HoldTime_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_HoldTime_2_Keren)</defaultValue>
        <label>BS_HoldTime_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_HoldTime_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_HoldTime_3_Oleh)</defaultValue>
        <label>BS_HoldTime_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_HoldTime_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_HoldTime_4_Mayan)</defaultValue>
        <label>BS_HoldTime_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_HoldTime_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_HoldTime_5_Cupu)</defaultValue>
        <label>BS_HoldTime_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_1_Dewa)</defaultValue>
        <label>BS_QA_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_2_Keren)</defaultValue>
        <label>BS_QA_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_3_Oleh)</defaultValue>
        <label>BS_QA_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_4_Mayan)</defaultValue>
        <label>BS_QA_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_5_Cupu)</defaultValue>
        <label>BS_QA_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Resolved_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Resolved_1_Dewa)</defaultValue>
        <label>BS_Resolved_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Resolved_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_Resolved_2_Keren)</defaultValue>
        <label>BS_Resolved_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Resolved_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_Resolved_3_Oleh)</defaultValue>
        <label>BS_Resolved_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Resolved_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_Resolved_4_Mayan)</defaultValue>
        <label>BS_Resolved_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Resolved_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Resolved_5_Cupu)</defaultValue>
        <label>BS_Resolved_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Response_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Response_1_Dewa)</defaultValue>
        <label>BS_Response_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Response_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_Response_2_Keren)</defaultValue>
        <label>BS_Response_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Response_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_Response_3_Oleh)</defaultValue>
        <label>BS_Response_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Response_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_Response_4_Mayan)</defaultValue>
        <label>BS_Response_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Response_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Response_5_Cupu)</defaultValue>
        <label>BS_Response_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Train_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_Train_1_Dewa)</defaultValue>
        <label>BS_Train_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Train_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_Train_2_Keren)</defaultValue>
        <label>BS_Train_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Train_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_Train_3_Oleh)</defaultValue>
        <label>BS_Train_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Train_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_Train_4_Mayan)</defaultValue>
        <label>BS_Train_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_Train_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_Train_5_Cupu)</defaultValue>
        <label>BS_Train_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Badge2_W1__c</fullName>
        <formula>IF (CSAT_Score_W1__c &gt;= BS_CSAT_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (CSAT_Score_W1__c &gt;= BS_CSAT_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (CSAT_Score_W1__c &gt;= BS_CSAT_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (CSAT_Score_W1__c &gt;= BS_CSAT_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (CSAT_Score_W1__c &gt;= BS_CSAT_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Badge2 (W1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Badge2_W2__c</fullName>
        <formula>IF (CSAT_Score_W2__c &gt;= BS_CSAT_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (CSAT_Score_W2__c &gt;= BS_CSAT_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (CSAT_Score_W2__c &gt;= BS_CSAT_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (CSAT_Score_W2__c &gt;= BS_CSAT_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (CSAT_Score_W2__c &gt;= BS_CSAT_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Badge2_W3__c</fullName>
        <formula>IF (CSAT_Score_W3__c &gt;= BS_CSAT_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (CSAT_Score_W3__c &gt;= BS_CSAT_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (CSAT_Score_W3__c &gt;= BS_CSAT_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (CSAT_Score_W3__c &gt;= BS_CSAT_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (CSAT_Score_W3__c &gt;= BS_CSAT_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Badge2__c</fullName>
        <formula>IF (CSAT_Score__c &gt;= BS_CSAT_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (CSAT_Score__c &gt;= BS_CSAT_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (CSAT_Score__c &gt;= BS_CSAT_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (CSAT_Score__c &gt;= BS_CSAT_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (CSAT_Score__c &gt;= BS_CSAT_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Badge__c</fullName>
        <formula>IF (CSAT_Score__c &gt;= BS_CSAT_1_Dewa__c, &quot;Dewa&quot;,
IF (CSAT_Score__c &gt;= BS_CSAT_2_Keren__c, &quot;Keren Abiz&quot;,
IF (CSAT_Score__c &gt;= BS_CSAT_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (CSAT_Score__c &gt;= BS_CSAT_4_Mayan__c, &quot;Mayanlah&quot;,
IF (CSAT_Score__c &gt;= BS_CSAT_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT_Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Count_W1__c</fullName>
        <label>CSAT Count W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Count_W2__c</fullName>
        <label>CSAT Count W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Count_W3__c</fullName>
        <label>CSAT Count W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSAT Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSAT_Score_W1__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Score_W2__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Score_W3__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <formula>(CSAT_Score_W1__c +
CSAT_Score_W2__c +
CSAT_Score_W3__c +
CSAT_Score_W4__c
) /
(
IF (CSAT_Score_W1__c &gt; 0,1,0) +
IF (CSAT_Score_W2__c &gt; 0,1,0) +
IF (CSAT_Score_W3__c &gt; 0,1,0) +
IF (CSAT_Score_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_W1__c</fullName>
        <label>CSAT W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_W2__c</fullName>
        <label>CSAT W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_W3__c</fullName>
        <label>CSAT W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Badge2_W1__c</fullName>
        <formula>IF (Hold_Time_Score_W1__c &gt;= BS_HoldTime_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Hold_Time_Score_W1__c &gt;= BS_HoldTime_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Hold_Time_Score_W1__c &gt;= BS_HoldTime_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Hold_Time_Score_W1__c &gt;= BS_HoldTime_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Hold_Time_Score_W1__c &gt;= BS_HoldTime_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Badge2 (W1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Badge2_W2__c</fullName>
        <formula>IF (Hold_Time_Score_W2__c &gt;= BS_HoldTime_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Hold_Time_Score_W2__c &gt;= BS_HoldTime_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Hold_Time_Score_W2__c &gt;= BS_HoldTime_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Hold_Time_Score_W2__c &gt;= BS_HoldTime_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Hold_Time_Score_W2__c &gt;= BS_HoldTime_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Badge2_W3__c</fullName>
        <formula>IF (Hold_Time_Score_W3__c &gt;= BS_HoldTime_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Hold_Time_Score_W3__c &gt;= BS_HoldTime_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Hold_Time_Score_W3__c &gt;= BS_HoldTime_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Hold_Time_Score_W3__c &gt;= BS_HoldTime_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Hold_Time_Score_W3__c &gt;= BS_HoldTime_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Badge2__c</fullName>
        <formula>IF (Hold_Time_Score__c &gt;= BS_HoldTime_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Hold_Time_Score__c &gt;= BS_HoldTime_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Hold_Time_Score__c &gt;= BS_HoldTime_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Hold_Time_Score__c &gt;= BS_HoldTime_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Hold_Time_Score__c &gt;= BS_HoldTime_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Badge__c</fullName>
        <formula>IF (Hold_Time_Score__c &gt;= BS_HoldTime_1_Dewa__c, &quot;Dewa&quot;,
IF (Hold_Time_Score__c &gt;= BS_HoldTime_2_Keren__c, &quot;Keren Abiz&quot;,
IF (Hold_Time_Score__c &gt;= BS_HoldTime_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (Hold_Time_Score__c &gt;= BS_HoldTime_4_Mayan__c, &quot;Mayanlah&quot;,
IF (Hold_Time_Score__c &gt;= BS_HoldTime_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Time Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Score_W1__c</fullName>
        <formula>90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Score_W2__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Score_W3__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_Score__c</fullName>
        <formula>(Hold_Time_Score_W1__c +
Hold_Time_Score_W2__c +
Hold_Time_Score_W3__c +
Hold_Time_Score_W4__c
) /
(
IF (Hold_Time_Score_W1__c &gt; 0,1,0) +
IF (Hold_Time_Score_W2__c &gt; 0,1,0) +
IF (Hold_Time_Score_W3__c &gt; 0,1,0) +
IF (Hold_Time_Score_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_W1__c</fullName>
        <label>Hold Time W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_W2__c</fullName>
        <label>Hold Time W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time_W3__c</fullName>
        <label>Hold Time W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periode_Quarter__c</fullName>
        <formula>TEXT(Year(Document_Date__c))&amp;&apos;-&apos;&amp;
IF ( MONTH(Document_Date__c) == 1, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 2, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 3, &apos;Q1&apos;,
IF ( MONTH(Document_Date__c) == 4, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 5, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 6, &apos;Q2&apos;,
IF ( MONTH(Document_Date__c) == 7, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 8, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 9, &apos;Q3&apos;,
IF ( MONTH(Document_Date__c) == 10, &apos;Q4&apos;,
IF ( MONTH(Document_Date__c) == 11, &apos;Q4&apos;,
IF ( MONTH(Document_Date__c) == 12, &apos;Q4&apos;,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(Document_Date__c) == 1, &apos;January&apos;,
IF ( MONTH(Document_Date__c) == 2, &apos;February&apos;,
IF ( MONTH(Document_Date__c) == 3, &apos;March&apos;,
IF ( MONTH(Document_Date__c) == 4, &apos;April&apos;,
IF ( MONTH(Document_Date__c) == 5, &apos;May&apos;,
IF ( MONTH(Document_Date__c) == 6, &apos;June&apos;,
IF ( MONTH(Document_Date__c) == 7, &apos;July&apos;,
IF ( MONTH(Document_Date__c) == 8, &apos;August&apos;,
IF ( MONTH(Document_Date__c) == 9, &apos;September&apos;,
IF ( MONTH(Document_Date__c) == 10, &apos;October&apos;,
IF ( MONTH(Document_Date__c) == 11, &apos;November&apos;,
IF ( MONTH(Document_Date__c) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(Document_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Badge2_W1__c</fullName>
        <formula>IF (Productivity_Score_W1__c &gt;= BS_Activity_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Productivity_Score_W1__c &gt;= BS_Activity_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Productivity_Score_W1__c &gt;= BS_Activity_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100) ,
IF (Productivity_Score_W1__c &gt;= BS_Activity_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Productivity_Score_W1__c &gt;= BS_Activity_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Badge2 (W1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Badge2_W2__c</fullName>
        <formula>IF (Productivity_Score_W2__c &gt;= BS_Activity_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Productivity_Score_W2__c &gt;= BS_Activity_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Productivity_Score_W2__c &gt;= BS_Activity_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100) ,
IF (Productivity_Score_W2__c &gt;= BS_Activity_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Productivity_Score_W2__c &gt;= BS_Activity_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Badge2_W3__c</fullName>
        <formula>IF (Productivity_Score_W3__c &gt;= BS_Activity_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Productivity_Score_W3__c &gt;= BS_Activity_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Productivity_Score_W3__c &gt;= BS_Activity_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100) ,
IF (Productivity_Score_W3__c &gt;= BS_Activity_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Productivity_Score_W3__c &gt;= BS_Activity_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Badge2__c</fullName>
        <formula>IF (Productivity_Score__c &gt;= BS_Activity_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Productivity_Score__c &gt;= BS_Activity_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Productivity_Score__c &gt;= BS_Activity_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100) ,
IF (Productivity_Score__c &gt;= BS_Activity_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Productivity_Score__c &gt;= BS_Activity_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Badge__c</fullName>
        <formula>IF (Productivity_Score__c &gt;= BS_Activity_1_Dewa__c, &quot;Dewa&quot;,
IF (Productivity_Score__c &gt;= BS_Activity_2_Keren__c, &quot;Keren Abiz&quot;,
IF (Productivity_Score__c &gt;= BS_Activity_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (Productivity_Score__c &gt;= BS_Activity_4_Mayan__c, &quot;Mayanlah&quot;,
IF (Productivity_Score__c &gt;= BS_Activity_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productivity Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Productivity_Score_W1__c</fullName>
        <formula>700</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Score_W2__c</fullName>
        <formula>600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Score_W3__c</fullName>
        <formula>510</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_Score__c</fullName>
        <formula>(Productivity_Score_W1__c +
 Productivity_Score_W2__c +
 Productivity_Score_W3__c +
 Productivity_Score_W4__c 
) / 
(
IF (Productivity_Score_W1__c &gt; 0,1,0) +
IF (Productivity_Score_W2__c &gt; 0,1,0) +
IF (Productivity_Score_W3__c &gt; 0,1,0) +
IF (Productivity_Score_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productivity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_W1__c</fullName>
        <label>Productivity W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_W2__c</fullName>
        <label>Productivity W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productivity_W3__c</fullName>
        <label>Productivity W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Badge2_W1__c</fullName>
        <formula>IF (QA_Score_W1__c &gt;= BS_QA_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (QA_Score_W1__c &gt;= BS_QA_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (QA_Score_W1__c &gt;= BS_QA_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (QA_Score_W1__c &gt;= BS_QA_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (QA_Score_W1__c &gt;= BS_QA_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Badge2 (W1)</label>
        <type>Text</type>
    </fields>
</CustomObject>